[package]
edition = "2018"
authors = ["49nord GmbH <hello@49nord.de>"]
description = "Calculates linear regresssions of two-dimensional data. Does not use stdlib, only depends on numeric traits."
documentation = "https://docs.rs/linreg"
license = "MIT"
name = "linreg"
readme = "README.md"
repository = "https://github.com/49nord/linreg-rs.git"
version = "0.2.0"

[dependencies.num-traits]
version = "0.2"
default-features = false  # Do not pull in `std` feature.

[dependencies.displaydoc]
version = "0.1"
default-features = false  # Do not pull in `std` feature.

[features]
std = ["num-traits/std", "displaydoc/std"]
